--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,15 +15,16 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<4.0"
+python = ">=3.10,<4.0"
 instructor = ">=1.3.4,<2.0.0"
-pydantic = ">=2.8.0,<3.0.0"
+pydantic = "2.10.3"
 rich = ">=13.7.1,<14.0.0"
 gitpython = ">=3.1.43,<4.0.0"
 pyfiglet = ">=1.0.2,<2.0.0"
 textual = ">=0.82.0,<1.0.0"
 pyyaml = ">=6.0.2,<7.0.0"
 requests = ">=2.32.3,<3.0.0"
+mcp = {extras = ["cli"], version = "^1.6.0"}
 
 [tool.poetry.group.dev.dependencies]
 black = ">=24.8.0,<25.0.0"
