--- a/atomic-examples/deep-research/pyproject.toml
+++ b/atomic-examples/deep-research/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kenny Vaneetvelde <kenny@brainblendai.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11,<4.0"
+python = ">=3.12,<4.0"
 atomic-agents = {path = "../..", develop = true}
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
@@ -16,7 +16,7 @@ lxml-html-clean = "^0.4.0"
 lxml = "^5.3.0"
 python-dotenv = ">=1.0.1,<2.0.0"
 openai = ">=1.35.12,<2.0.0"
-
+trafilatura = "^1.6.3"
 
 [build-system]
 requires = ["poetry-core"]
