--- a/atomic-examples/orchestration-agent/pyproject.toml
+++ b/atomic-examples/orchestration-agent/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["KennyVaneetvelde <kenny@inosta.be>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.12,<4.0"
 atomic-agents = {path = "../..", develop = true}
 instructor = "^1.6.1"
 pydantic = "^2.9.2"
