--- a/atomic-examples/web-search-agent/pyproject.toml
+++ b/atomic-examples/web-search-agent/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kenny Vaneetvelde <kenny.vaneetvelde@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.12,<4.0"
 atomic-agents = {path = "../..", develop = true}
 openai = ">=1.35.12,<2.0.0"
 pydantic = ">=2.9.2,<3.0.0"
