--- a/atomic-examples/mcp-agent/example-client/pyproject.toml
+++ b/atomic-examples/mcp-agent/example-client/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 atomic-agents = { path = "../../../", develop = true }
+example-mcp-server = { path = "../example-mcp-server", develop = true }
 python = ">=3.10,<3.13"
 pydantic = ">=2.0.0"
 rich = ">=13.0.0"
