--- a/atomic-examples/mcp-agent/example-mcp-server/pyproject.toml
+++ b/atomic-examples/mcp-agent/example-mcp-server/pyproject.toml
@@ -5,10 +5,10 @@ description = "example-mcp-server MCP server"
 authors = []
 requires-python = ">=3.10"
 dependencies = [
+    "mcp[cli]",
     "rich>=13.0.0",
     "pydantic>=2.0.0",
     "uvicorn>=0.15.0",
-    "mcp[cli]>=1.6.0",
 ]
 
 [build-system]
