--- a/atomic-examples/youtube-to-recipe/pyproject.toml
+++ b/atomic-examples/youtube-to-recipe/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kenny Vaneetvelde <kenny.vaneetvelde@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.12,<4.0"
 atomic-agents = {path = "../..", develop = true}
 openai = ">=1.35.12,<2.0.0"
 pydantic = ">=2.9.2,<3.0.0"
@@ -17,5 +17,5 @@ python-dotenv = ">=1.0.1,<2.0.0"
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
