--- a/atomic-forge/tools/tavily_search/pyproject.toml
+++ b/atomic-forge/tools/tavily_search/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.12,<4"
+python = ">=3.12,<4.0"
 atomic-agents = {path = "../../../", develop = true}
 pydantic = ">=2.8.2,<3"
 aiohttp = ">=3.9.0,<4"
@@ -21,5 +21,5 @@ python-dotenv = ">=1.0.0,<2.0.0"
 rich = ">=13.7.0,<14.0.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
