--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -2,9 +2,9 @@ name: Code Quality & Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, v2.0 ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, v2.0 ]
   workflow_dispatch:
 
 jobs:
